--- a/.github/workflows/pullrequestpipeline.yml
+++ b/.github/workflows/pullrequestpipeline.yml
@@ -29,7 +29,7 @@ jobs:
           browserVersion:
           osName:
           osVersion:
-          testSuiteSysId: "cb84d4ee645320107f44ee76849dd2e5"
+          testSuiteSysId: ${{ secrets.TEST_SUITE_ID }}
           testSuiteName:
         env:
           snowUsername: ${{ secrets.NOW_USERNAME }}
